services/experiment-platform/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: experiment-platform-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - exp.pseudolab-devfactory.com
      secretName: experiment-platform-tls
  rules:
    - host: exp.pseudolab-devfactory.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: experiment-platform-backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: experiment-platform-frontend
                port:
                  number: 80
